--- a/app/src/main/res/layout/snippet_card_egitim.xml
+++ b/app/src/main/res/layout/snippet_card_egitim.xml
@@ -78,23 +78,34 @@
                         android:background="@color/blue" />
 
                 </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/empty_message1"
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:text="Hiç Eğitim Eklenmemiş"
-                    android:visibility="visible" />
+                    android:orientation="vertical">
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/egitimList"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp">
+                    <TextView
+                        android:id="@+id/empty_message1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textColor="@color/black"
+                        android:fontFamily="casual"
+                        android:textSize="16sp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp"
 
+                        android:text="Hiç Eğitim Eklenmemiş"
+                        android:visibility="gone" />
 
-                </android.support.v7.widget.RecyclerView>
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/egitimList"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp">
+
+                    </android.support.v7.widget.RecyclerView>
+
+                </RelativeLayout>
 
 
             </LinearLayout>
