--- a/app/src/main/res/layout/empty_job.xml
+++ b/app/src/main/res/layout/empty_job.xml
@@ -8,6 +8,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:tint="@color/mycolor"
         android:src="@drawable/jobsearch"
 
         />
