--- a/app/src/main/res/layout/snippet_card_yetenek.xml
+++ b/app/src/main/res/layout/snippet_card_yetenek.xml
@@ -78,25 +78,33 @@
                         android:background="@color/DarkSlateBlue" />
 
                 </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/empty_message2"
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:text="Hiç Yetenek Eklenmemiş"
-                    android:visibility="visible" />
+                    android:orientation="vertical">
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/yetenekList"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp">
+                    <TextView
+                        android:id="@+id/empty_message2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textColor="@color/black"
+                        android:fontFamily="casual"
+                        android:textSize="16sp"
+                        android:layout_marginTop="20dp"
+                        android:text="Hiç Yetenek Eklenmemiş"
+                        android:layout_marginBottom="20dp"
+                        android:visibility="gone" />
 
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/yetenekList"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp">
 
-                </android.support.v7.widget.RecyclerView>
+                    </android.support.v7.widget.RecyclerView>
 
-
+                </RelativeLayout>
             </LinearLayout>
 
         </LinearLayout>
