--- a/app/src/main/res/layout/success_dialog_jobadvert.xml
+++ b/app/src/main/res/layout/success_dialog_jobadvert.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/dialogcorner">
 
@@ -28,6 +30,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
+                android:outlineProvider="bounds"
                 android:gravity="center">
 
                 <ImageView
@@ -98,15 +101,13 @@
         android:id="@+id/closeDialog2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignEnd="@+id/topRelative"
-        android:layout_alignTop="@+id/topRelative"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="-15dp"
+       app:rippleColor="@color/OrangeRed"
+        app:layout_anchorGravity="end|top"
+        app:layout_anchor="@+id/success_top"
         android:src="@drawable/ic_close_black_24dp"
         android:tint="@color/black"
         app:backgroundTint="@color/white"
         app:elevation="6dp"
         app:fabSize="mini" />
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
